--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,29 +2,40 @@ version: '3.9'
 services:
 
   api:
-    image: apod-img-store-server
+    image: apod-img-store
+    container_name: apod-img-store-server
     build:
       context: .
       dockerfile: ./Dockerfile
-    volumes:
-      - /tmp/app:/var/log/app
     ports:
       - "8080:8080"
     environment:
-      - APP_ENV=local
-      - APP_DSN=postgres://db/go_restful?sslmode=disable&user=postgres&password=postgres
+      - DB_DRIVER=postgres
+      - DB_SOURCE=host=localhost:5432 user=postgres password=postgres dbname=apod sslmode=disable
+      - SERVER_PORT=8080
     depends_on:
-      db:
+      postgresDB:
         condition: service_healthy
-  db:
-    image: "postgres:alpine"
+
+  postgresDB:
+    image: "postgres"
     restart: always
     environment:
       POSTGRES_USER: "postgres"
       POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "adop"
+      APP_DB_NAME: "apod"
+      APP_DB_USER: "apoduser"
+      APP_DB_PASS: "apoduserpassword"
+    ports:
+      - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data/
+      - ./db_scripts:/docker-entrypoint-initdb.d/
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+volumes:
+  db_data: {}
