--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
       - "8080:8080"
     environment:
       - DB_DRIVER=postgres
-      - DB_SOURCE=host=localhost:5432 user=postgres password=postgres dbname=apod sslmode=disable
+      - DB_SOURCE=host=postgresDB user=apoduser password=apoduserpassword dbname=apod sslmode=disable
       - SERVER_PORT=8080
     depends_on:
       postgresDB:
